<resources>
    <string name="app_name">Court Counter</string>

    <string name="team_name_blue_circles">Blue Circles</string>
    <string name="team_name_green_triangles">Green Triangles</string>
    <string name="team_name_red_squares">Red squares</string>
    <string name="team_name_yellow_stars">Yellow Stars</string>
    <string name="team_position_defense">defense</string>
    <string name="team_position_offense">at bat</string>

    <string name="hits">hits: %1$d</string>
    <string name="strikes">strikes: %1$d</string>
    <string name="balls">balls: %1$d</string>
    <string name="outs">outs: %1$d</string>

    <string name="grand_slam">grand\nslam!</string>
    <string name="home_run">homer</string>
    <string name="out_at_1st">out 1st</string>
    <string name="out_at_2nd">out 2nd</string>
    <string name="out_at_3rd">out 3rd</string>
    <string name="new_game">new game</string>
    <string name="strike">strike</string>
    <string name="foul">foul</string>
    <string name="ball">ball</string>
    <string name="out_at_bat">K</string>
    <string name="single_hit">single</string>
    <string name="double_hit">double</string>
    <string name="triple_hit">triple</string>
    <string name="steal_2nd">st 2nd</string>
    <string name="steal_3rd">st 3rd</string>
    <string name="steal_home">st hm</string>

    <string name="runners_singular">There is a runner on %1$s.</string>
    <string name="runners_plural">Runners are on %1$s and %2$s.</string>
    <string name="runners_all">Bases are loaded.</string>
    <string name="runners_none">No runners are on base.</string>
    <string name="runners_first">first</string>
    <string name="runners_second">second</string>
    <string name="runners_third">third</string>
</resources>
