<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.example.android.courtcounter.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <LinearLayout
            android:id="@+id/players_layouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_team1_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Team name"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_team1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/blue_circles" />

                <TextView
                    android:id="@+id/txt_team1_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textColor="#ffffff"
                    android:textSize="72sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_team1_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_position_offense"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_team1_hits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hits"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"></View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_team2_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Team name"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_team2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/blue_circles" />

                <TextView
                    android:id="@+id/txt_team2_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textColor="#ffffff"
                    android:textSize="72sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_team2_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_position_defense"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_team2_hits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hits"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/img_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/play_buttons"
            android:layout_below="@id/players_layouts"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="120dp"
            android:adjustViewBounds="true"
            android:src="@drawable/field" />

        <ImageView
            android:id="@+id/img_runners1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/play_buttons"
            android:layout_below="@id/players_layouts"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="120dp"
            android:adjustViewBounds="true"
            android:src="@drawable/runners_1" />

        <ImageView
            android:id="@+id/img_runners2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/play_buttons"
            android:layout_below="@id/players_layouts"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="120dp"
            android:adjustViewBounds="true"
            android:src="@drawable/runners_2" />

        <ImageView
            android:id="@+id/img_runners3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/play_buttons"
            android:layout_below="@id/players_layouts"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="120dp"
            android:adjustViewBounds="true"
            android:src="@drawable/runners_3" />

        <LinearLayout
            android:id="@+id/play_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_new_game"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_strikes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/strikes"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_balls"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/balls"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_outs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/outs"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_strike"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnStrike"
                        android:text="@string/strike"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/btn_foul"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnFoul"
                        android:text="@string/foul"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/btn_ball"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnBall"
                        android:text="@string/ball"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/btn_out"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnOut"
                        android:text="@string/out_at_bat"
                        android:textColor="@color/button_text_color" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_single"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnSingle"
                        android:text="@string/single_hit"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/btn_double"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnDouble"
                        android:text="@string/double_hit"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/btn_triple"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnTriple"
                        android:text="@string/triple_hit"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/btn_homer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnHomeRun"
                        android:text="@string/home_run"
                        android:textColor="@color/button_text_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_steal_2nd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnStealSecond"
                        android:text="@string/steal_2nd"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/btn_steal_3rd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnStealThird"
                        android:text="@string/steal_3rd" />

                    <Button
                        android:id="@+id/btn_steal_home"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnStealHome"
                        android:text="@string/steal_home"
                        android:textColor="@color/button_text_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_out_at_1st"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnOutAtFirst"
                        android:text="@string/out_at_1st" />

                    <Button
                        android:id="@+id/btn_out_at_2nd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnOutAtSecond"
                        android:text="@string/out_at_2nd"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/btn_out_at_3rd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_color"
                        android:onClick="onBtnOutAtThird"
                        android:text="@string/out_at_3rd"
                        android:textColor="@color/button_text_color" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"
            android:background="@drawable/button_color"
            android:onClick="onBtnReset"
            android:text="@string/new_game"
            android:textAllCaps="true"
            android:textColor="@color/button_text_color" />
    </RelativeLayout>
</layout>